readme and build up